Add delayed policy event test